<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call BlackList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sms">SMS Filter</string>
    <string name="calllog">Call Log Filter</string>
    <string name="log">Log</string>
    <string name="add">Add</string>
    <string name="phone_number">Phone Numbers: %s</string>
    <string name="contact_name">Contact Name: %s</string>
    <string name="setting">Settting</string>
    <string name="choose_filter">Choose Fillter:</string>
    <string name="title_notifi">Title:</string>
    <string name="input_title">Input title notification</string>
    <string name="content_notifi">Content:</string>
    <string name="input_content">Input content notification</string>
    <string name="number">Phone number:</string>
    <string name="input_phone">Input number phone</string>
    <string name="import_contact">Import Contact</string>
    <string name="import_calllog">Import CallLog</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="dialog_title">Add Filter</string>
    <string name="test_notification">Test Notification</string>
    <string name="all"><![CDATA[SMS & Call]]></string>
    <string name="call">Call</string>
    <string name="smschoose">SMS</string>
    <string name="choose_number">Choose from Call Log</string>
    <string name="name">Name Filter:</string>
    <string name="input_name">Input name filter</string>
    <string name="do_not_show">Do not show notificaion</string>
    <string name="show">Show notification</string>
    <string name="alert">Alert</string>
    <string name="content">Are you sure you want to delete?</string>
    <string name="ok">Ok</string>
    <string name="time_call">Time call: %s</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="password">Passcode</string>
    <string name="delete">Delete</string>
    <string name="title_activity_setup_pass">SetupPass</string>
    <string name="input_pass">Input passcode</string>
    <string name="confirm_pass">Confirm passcode</string>
    <string name="setup_title">Setup Passcode</string>
    <string name="confirm">Confirm</string>
    <string name="pass_null">Input Passcode</string>
    <string name="pass_confirm_null">Input Confirm Passcode</string>
    <string name="confirm_pass_safe">Confirm passcode is incorrect</string>
    <string name="pass_lenght">Passcode must be 4 characters</string>
    <string name="pass_error">Wrong Passcode</string>
    <string name="title">Vote for my app :)</string>
    <string name="content_vote">You can vote for my application???</string>
    <string name="later">Later</string>
    <string name="novote">Do not show again</string>
</resources>
