<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.truongtvd.callsmsfilter.SetupPass">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/layout_pas"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/setup_title"
            android:textColor="@color/holo"
            android:textStyle="bold"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pass"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="4" />

        <EditText
            android:id="@+id/ed_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </LinearLayout>
    <Button
        android:id="@+id/btnComfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/holo"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_below="@+id/layout_pas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
